# NoteroPDF

./: .env.example  .flake8  .gitignore  AI_AGENTIC_DEVELOPMENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
noteropdf/: __main__.py  cli.py  config.py  logging_setup.py  models.py  notion_client.py  reporting.py  state_store.py  status.py  support_bundle.py  sync_engine.py  util.py  zotero_repo.py
tests/: test_cli.py  test_config.py  test_notion_client.py  test_state_store.py  test_support_bundle.py  test_sync_engine.py  test_util.py  test_zotero_repo.py
