[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noteropdf"
version = "0.2.1"
description = "Deterministic local Zotero PDF to Notion files-property sync CLI"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "platformdirs==4.3.8",
  "keyring==25.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "build==1.2.2.post1",
  "pyinstaller==6.19.0",
]

[project.scripts]
noteropdf = "noteropdf.cli:main"

[tool.setuptools.packages.find]
include = ["noteropdf*"]
